tests/NormalTests/paczka1/fuzzy1/99696041.err
Error in line 7: YXjB A219 44,1
Error in line 31: S888 A45 34,82
Error in line 32: cznzNXK 45 69,9
Error in line 33: 0by A45 35,3
Error in line 38: 0by A219 43,8
Error in line 25: S888 A45 10,5
